{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 15,
  "lineage": "cfc05243-421a-5e5c-0f98-c69b7fdef6f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e171b7c778e881d",
            "domain": "vpc",
            "id": "eipalloc-03e171b7c778e881d",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-35-156-120-216.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.156.120.216",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:911639428581:internet-gateway/igw-0b0659df7909c7ce6",
            "id": "igw-0b0659df7909c7ce6",
            "owner_id": "911639428581",
            "vpc_id": "vpc-02ef598d9f6c96642"
          },
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e171b7c778e881d",
            "connectivity_type": "public",
            "id": "nat-00bde5c65428d81f7",
            "network_interface_id": "eni-0f5f8c0ea90eb96b9",
            "private_ip": "10.10.10.246",
            "public_ip": "35.156.120.216",
            "subnet_id": "subnet-05efce7b5bb0589c3"
          },
          "dependencies": [
            "aws_eip.ip_pub",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f9c14c7ae873fea61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00bde5c65428d81f7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f9c14c7ae873fea6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip_pub",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.default",
            "aws_route_table.rt_private",
            "aws_subnet.public",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:911639428581:route-table/rtb-0f9c14c7ae873fea6",
            "id": "rtb-0f9c14c7ae873fea6",
            "owner_id": "911639428581",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ef598d9f6c96642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:911639428581:route-table/rtb-0abd560e16e1dc504",
            "id": "rtb-0abd560e16e1dc504",
            "owner_id": "911639428581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0659df7909c7ce6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ef598d9f6c96642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "link_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c178e34a27d7b1f",
            "route_table_id": "rtb-0f9c14c7ae873fea6",
            "subnet_id": "subnet-0eb2443fc470a578c"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.private",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "link_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced12c9c4d2048dc",
            "route_table_id": "rtb-0abd560e16e1dc504",
            "subnet_id": "subnet-05efce7b5bb0589c3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.public",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:911639428581:security-group/sg-03003a70a68712ed7",
            "description": "Allow inbound traffic from public subnet",
            "egress": [],
            "id": "sg-03003a70a68712ed7",
            "ingress": [],
            "name": "terraform-20221224175641676300000001",
            "name_prefix": "terraform-",
            "owner_id": "911639428581",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ef598d9f6c96642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:911639428581:security-group/sg-040e9e11b9e06233c",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040e9e11b9e06233c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public",
            "name_prefix": "",
            "owner_id": "911639428581",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ef598d9f6c96642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3843977351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03003a70a68712ed7",
            "security_group_rule_id": "sgr-07c461004d2564139",
            "self": false,
            "source_security_group_id": "sg-040e9e11b9e06233c",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_private",
            "aws_security_group.sg_public",
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:911639428581:subnet/subnet-0eb2443fc470a578c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb2443fc470a578c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911639428581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02ef598d9f6c96642"
          },
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:911639428581:subnet/subnet-05efce7b5bb0589c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05efce7b5bb0589c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911639428581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02ef598d9f6c96642"
          },
          "dependencies": [
            "aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:911639428581:vpc/vpc-02ef598d9f6c96642",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0e35d1491c58344a6",
            "default_route_table_id": "rtb-0852ebd7a214de68e",
            "default_security_group_id": "sg-080de2c441a796aae",
            "dhcp_options_id": "dopt-0cf3d0aa44132cf2b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ef598d9f6c96642",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0852ebd7a214de68e",
            "owner_id": "911639428581",
            "tags": {
              "Environment": "dev",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "vpc",
              "Team": "hillel devops"
            }
          }
        }
      ]
    }
  ]
}